[gd_scene load_steps=12 format=2]

[ext_resource path="res://Game/Options.gd" type="Script" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/MajorMonoDisplay-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxTexture" id=1]

[sub_resource type="StyleBoxTexture" id=2]

[sub_resource type="StyleBoxTexture" id=3]

[sub_resource type="StyleBoxTexture" id=4]

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = SubResource( 1 )
Button/styles/hover = SubResource( 2 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 4 )
"Title Label/styles/" = null

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = SubResource( 1 )
Button/styles/hover = SubResource( 2 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 4 )
"Title Label/styles/" = null

[node name="Options" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1840.0
margin_bottom = 1000.0

[node name="GraphicalSettings" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 918.0
margin_bottom = 1000.0
size_flags_horizontal = 3
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/GraphicalSettings"]
margin_right = 918.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 0
theme = ExtResource( 2 )
text = "Graphics"
valign = 1

[node name="Resolution" type="HSplitContainer" parent="MarginContainer/HBoxContainer/GraphicalSettings"]
margin_top = 140.0
margin_right = 918.0
margin_bottom = 180.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/GraphicalSettings/Resolution"]
margin_right = 453.0
margin_bottom = 40.0
rect_min_size = Vector2( 325, 0 )
size_flags_horizontal = 3
size_flags_vertical = 12
theme = ExtResource( 2 )
text = "resolution"
autowrap = true

[node name="ResolutionDropDown" type="OptionButton" parent="MarginContainer/HBoxContainer/GraphicalSettings/Resolution"]
margin_left = 465.0
margin_right = 918.0
margin_bottom = 40.0
size_flags_horizontal = 3
theme = ExtResource( 2 )

[node name="Preset" type="VBoxContainer" parent="MarginContainer/HBoxContainer/GraphicalSettings"]
margin_top = 220.0
margin_right = 918.0
margin_bottom = 1000.0
size_flags_vertical = 3
custom_constants/separation = 20

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/HBoxContainer/GraphicalSettings/Preset"]
margin_right = 918.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/GraphicalSettings/Preset/HSplitContainer"]
margin_right = 453.0
margin_bottom = 40.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "preset"

[node name="PresetDropDown" type="OptionButton" parent="MarginContainer/HBoxContainer/GraphicalSettings/Preset/HSplitContainer"]
margin_left = 465.0
margin_right = 918.0
margin_bottom = 40.0
size_flags_horizontal = 3
theme = ExtResource( 2 )

[node name="GraphicsBlurb" type="RichTextLabel" parent="MarginContainer/HBoxContainer/GraphicalSettings/Preset"]
margin_top = 60.0
margin_right = 918.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 100 )
theme = SubResource( 6 )

[node name="GraphicsInfo" type="RichTextLabel" parent="MarginContainer/HBoxContainer/GraphicalSettings/Preset"]
margin_top = 180.0
margin_right = 918.0
margin_bottom = 780.0
size_flags_vertical = 3
theme = SubResource( 8 )
bbcode_enabled = true

[node name="AudioSettings" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 922.0
margin_right = 1840.0
margin_bottom = 1000.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/AudioSettings"]
margin_right = 918.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
theme = ExtResource( 2 )
text = "
"
valign = 1
[connection signal="item_selected" from="MarginContainer/HBoxContainer/GraphicalSettings/Resolution/ResolutionDropDown" to="." method="_on_ResolutionDropDown_item_selected"]
[connection signal="item_selected" from="MarginContainer/HBoxContainer/GraphicalSettings/Preset/HSplitContainer/PresetDropDown" to="." method="_on_PresetDropDown_item_selected"]
